--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="app"></div>
+  <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
   <script src="./app.js" charset="utf-8"></script>
 </body>
 </html>
