アルバム一覧を作成

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,6 @@
 <div>
   <navbar v-ref:navbar></navbar>
-  <router-view></router-view>
+  <div class="container">
+    <router-view></router-view>    
+  </div>
 </div>
