コードの整理

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <div>
-  <navbar v-ref:navbar></navbar>
+  <navbar :active="active"></navbar>
   <div class="container">
-    <router-view></router-view>    
+    <router-view></router-view>
   </div>
 </div>
