--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <div>
   <navbar :active="active"></navbar>
-  <div class="container">
+  <div class="container" style="margin-top: 1rem">
     <router-view></router-view>
   </div>
 </div>
