--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>楽譜管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
 </head>
 <body>
   <div id="app"></div>
