アクセス制限を設定

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <div>
-  <navbar :active="active"></navbar>
-  <div class="container" style="margin-top: 1rem; margin-bottom: 1rem">
+  <navbar :active="active" :auth="auth"></navbar>
+  <div class="container m-y-lg">
     <router-view></router-view>
   </div>
 </div>
