SassとFoundationを導入してレイアウトを作成

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,18 @@
 <div>
-  <navbar :active="active" :auth="auth"></navbar>
-  <div class="container m-y-lg">
+  <header>
+    <h1 id="title">楽譜管理</h1>
+    <div class="input-group">
+      <input type="text" class="input-group-field" placeholder="キーワード">
+      <div class="input-group-button">
+        <input type="button" class="button" value="検索" @click="search">
+      </div>
+    </div>
+  </header>
+  <main>
+    <songs :modal.sync="modal"></songs>
     <router-view></router-view>
-  </div>
+  </main>
+  <footer>
+    <div>Copyright 2016 kaorun343</div>
+  </footer>
 </div>
