--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <title>楽譜管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div id="app"></div>
-  <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
   <script src="./app.js" charset="utf-8"></script>
 </body>
 </html>
